force-app/main/default/objects/Pricebook2/fields/IMP_Update__c.field-meta.xml
<CustomField>
    <fullName>IMP_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bander</description>
    <label>Actualizado</label>
    <type>Checkbox</type>
</CustomField>