force-app/main/default/objects/Pricebook2/fields/Lista_de_precios_SAP__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_precios_SAP__c</fullName>
    <label>Lista de precios SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lista_de_precios_SAP</valueSetName>
    </valueSet>
</CustomField>