force-app/main/default/objects/Pricebook2/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log</label>
    <length>1638</length>
    <type>LongTextArea</type>
</CustomField>