force-app/main/default/objects/Pricebook2/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Centro_suministrador</valueSetName>
    </valueSet>
</CustomField>